[gd_scene load_steps=4 format=3 uid="uid://drm8m3oxfg6as"]

[ext_resource type="Texture2D" uid="uid://l3k5yman5k01" path="res://Assets/Materials/TreeFakeWall2.png" id="1_bc6al"]
[ext_resource type="Script" uid="uid://b5jctlirnh364" path="res://Assets/UI/main_menu.gd" id="1_trh8p"]
[ext_resource type="Theme" uid="uid://bwlfq1mbni6ka" path="res://Assets/UI/UI.tres" id="2_trh8p"]

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_trh8p")
script = ExtResource("1_trh8p")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00016677, 0.0135328, 0.163351, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_bc6al")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2

[node name="left" type="VBoxContainer" parent="TextureRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="middle" type="VBoxContainer" parent="TextureRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer/HBoxContainer/middle"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect/MarginContainer/HBoxContainer/middle/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_trh8p")
bbcode_enabled = true
text = "[center][b]Missed My Exit[/b][/center]"
fit_content = true

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/MarginContainer/HBoxContainer/middle/VBoxContainer"]
layout_mode = 2

[node name="ButtonsBox" type="VBoxContainer" parent="TextureRect/MarginContainer/HBoxContainer/middle/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="StartGameButton" type="Button" parent="TextureRect/MarginContainer/HBoxContainer/middle/VBoxContainer/MarginContainer/ButtonsBox"]
layout_mode = 2
text = "Start"

[node name="QuitGameButton" type="Button" parent="TextureRect/MarginContainer/HBoxContainer/middle/VBoxContainer/MarginContainer/ButtonsBox"]
layout_mode = 2
text = "Quit"

[node name="right" type="VBoxContainer" parent="TextureRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="TextureRect/MarginContainer/HBoxContainer/middle/VBoxContainer/MarginContainer/ButtonsBox/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/HBoxContainer/middle/VBoxContainer/MarginContainer/ButtonsBox/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
